--- a/artikel.html
+++ b/artikel.html
@@ -54,11 +54,11 @@
             <div class="col-md-4 pb-5">
                 <div class="slide">
                     <div class="slide-img">
-                        <img src="c1.jpeg" alt="" class="s-img">
+                        <img src="cianjur.jpeg" alt="" class="s-img">
                     </div>
                     <div class="caption text-white text-center">
-                        <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, placeat?</h5>
-                        <a href="#" class="btn-artikel">Baca Lengkap</a>
+                        <h5>Rumah Sakit QADR Peduli Korban Gempa Cianjur</h5>
+                        <a href="artikeldetail.html" class="btn-artikel">Baca Lengkap</a>
                     </div>
                 </div>
             </div>
